--- a/furniture_info/stefan.yaml
+++ b/furniture_info/stefan.yaml
@@ -11,7 +11,7 @@ ikea_stefan_side_left:
       - [[0.453, 0.875, -0.05], [ 0, 0, 0.6376, 0.7703 ]]
       - [[0.447, 0.841, -0.05], [ 0, 0, 0.6376, 0.7703 ]]
       # - [[0.395, 0.569, -0.05],  [ 0, 0, -0.0938911, 0.9955825 ]] #original 2
-      - [[0.395, 0.569, -0.05],  [ 0, 0, 0.6376, 0.7703 ]] #modified 2
+      - [[0.389, 0.575, -0.05],  [ 0, 0, 0.6376, 0.7703 ]] #modified 2
       # - [[0.400, 0.576, -0.05],  [ 0, 0, 0.6376, 0.7703 ]] #modified 3
          
       - [[0.366624, 0.413727, -0.05], [ 0, 0, -0.7071068, 0.7071068 ]]
@@ -83,7 +83,7 @@ ikea_stefan_long:
       
         #coordinates of bracket holes
       # - [[0.112, -0.014, 0.02], [ -0.7071068, 0.7071068, 0, 0 ]] # 4
-      - [[0.115, -0.011, 0.02], [ -0.7071068, 0.7071068, 0, 0 ]] # 4
+      - [[0.117, -0.011, 0.02], [ -0.7071068, 0.7071068, 0, 0 ]] # 4
       # - [[-0.112, -0.014, 0.02], [ -0.7071068, 0.7071068, 0, 0 ]] # 5
       - [[-0.112, -0.011, 0.02], [ -0.7071068, 0.7071068, 0, 0 ]] # 5
 
@@ -110,20 +110,34 @@ ikea_stefan_short:
       # - [[0.135, -0.016, 0.01], [ -0.7071068, 0, 0.7071068, 0 ]]
       # - [[-0.135, 0.016, 0.01], [ 0, 0.7071068, 0, 0.7071068 ]]
       # - [[-0.135, -0.016, 0.01], [ 0, 0.7071068, 0, 0.7071068 ]]
-      - [[0.135, 0.016, 0.01], [ -0.5, -0.5, 0.5, 0.5 ]]
-      - [[0.135, -0.016, 0.01], [ -0.5, -0.5, 0.5, 0.5 ]]
-      - [[-0.135, 0.016, 0.01], [ 0.5, -0.5, 0.5, -0.5 ]]
+      - [[0.135, 0.016, 0.01], [ -0.5, -0.5, 0.5, 0.5 ]]                
+      - [[0.135, -0.016, 0.01], [ -0.5, -0.5, 0.5, 0.5 ]]                  
+      - [[-0.135, 0.016, 0.01], [ 0.5, -0.5, 0.5, -0.5 ]]            
       - [[-0.135, -0.016, 0.01], [ 0.5, -0.5, 0.5, -0.5 ]]
+      
+      
 
         # coordinates of bracket holes
       # - [[0.08, -0.014, 0.02], [ -0.7071068, 0.7071068, 0, 0 ]] # 4
       - [[0.083, -0.011, 0.02], [ -0.7071068, 0.7071068, 0, 0 ]] # 4
       # - [[-0.08, -0.014, 0.02], [ -0.7071068, 0.7071068, 0, 0 ]] # 5
-      - [[-0.081, -0.015, 0.02], [ -0.7071068, 0.7071068, 0, 0 ]] # 5
+      - [[-0.08, -0.014, 0.02], [ -0.7071068, 0.7071068, 0, 0 ]] # 5
 
         # coordinates of bolt holes
       - [[0.135, 0.0, 0.01], [ 0, -0.7071068, 0, 0.7071068 ]]
       - [[-0.135, 0.0, 0.01], [ 0, 0.7071068, 0, 0.7071068 ]]
+
+      # ADD by HS, to test GMM algorithm
+      # - [[0.135, 0.0210000000000000, 0.0100000000000000], [ -0.5, -0.5, 0.5, 0.5 ]]                
+      # - [[0.135, 0.0200450849718747, 0.0129389262614624], [ -0.5, -0.5, 0.5, 0.5 ]]                
+      # - [[0.135, 0.0175450849718747, 0.0147552825814758], [ -0.5, -0.5, 0.5, 0.5 ]]                
+      # - [[0.135, 0.0144549150281253, 0.0147552825814758], [ -0.5, -0.5, 0.5, 0.5 ]] # 성공 가능 pressing force만 좀 더 키운다면                            
+      # - [[0.135, 0.0119549150281253, 0.0129389262614624], [ -0.5, -0.5, 0.5, 0.5 ]]   
+      # - [[0.135, 0.0110000000000000, 0.0100000000000000], [ -0.5, -0.5, 0.5, 0.5 ]] # 성공 가능 pressing force만 좀 더 키운다면                                           
+      # - [[0.135, 0.0119549150281253, 0.00706107373853764], [ -0.5, -0.5, 0.5, 0.5 ]]                
+      # - [[0.135, 0.0144549150281253, 0.00524471741852423], [ -0.5, -0.5, 0.5, 0.5 ]]                
+      # - [[0.135, 0.0175450849718747, 0.00524471741852423], [ -0.5, -0.5, 0.5, 0.5 ]]                
+      # - [[0.135, 0.0200450849718747, 0.00706107373853763], [ -0.5, -0.5, 0.5, 0.5 ]]                
 
     graspable_points: ikea_stefan_short_grasp.yaml
     graspable_lines: ikea_stefan_short_cont_grasp.yaml
@@ -147,8 +161,8 @@ ikea_stefan_middle:
        - [[0.135, 0.016, 0.01], [ -0.5, -0.5, 0.5, 0.5 ]]
        - [[0.135, -0.016, 0.01], [ -0.5, -0.5, 0.5, 0.5 ]]
        - [[0.135, -0.297, 0.0060], [  -0.5, -0.5, 0.5, 0.5 ]]      
-       - [[-0.135, 0.0145, 0.01], [0.5, 0.5, 0.5, 0.5]]
-       - [[-0.135, -0.016, 0.01], [0.5, 0.5, 0.5, 0.5]]
+       - [[-0.135, 0.012, 0.013], [0.5, 0.5, 0.5, 0.5]] # 210227
+       - [[-0.135, -0.02, 0.013], [0.5, 0.5, 0.5, 0.5]] # 210227
        - [[-0.135, -0.3, 0.0055], [0.5, 0.5, 0.5, 0.5]]      
 
          # point to mate a zig
@@ -182,18 +196,20 @@ ikea_stefan_without_bottom:
     tf_visible: true
     assembly_points:      
       # coordinate of bolt holes        
-      - [[0.445, 0.858, -0.01535], [ 0.9238795, -0.3826834, 0, 0 ]]   # [-0.3827, 0.9239, 0, 0])
+      # - [[0.445, 0.858, -0.01535], [ 0.9238795, -0.3826834, 0, 0 ]]   # [-0.3827, 0.9239, 0, 0])
+      - [[0.433, 0.877, -0.01535], [ 0.9238795, -0.3826834, 0, 0 ]]   # [-0.3827, 0.9239, 0, 0])
       # - [[0.362, 0.40450, -0.01535], [ 0.3826834, 0.9238795, 0, 0 ]] ##num8   backup [[0.366548, 0.397227, -0.01535], [ 0.3826834, 0.9238795, 0, 0 ]] ##num8
-      - [[0.365, 0.40450, -0.01535], [ 0.7071068, 0.7071068, 0, 0 ]]  #362
+      - [[0.365, 0.37750, -0.01535], [ 0.7071068, 0.7071068, 0, 0 ]]  #362
       
       # - [[0.0, 0.41050, 0.01535], [ 0.7071068, 0.7071068, 0, 0 ] ] #[ 0, 0, 0.9238795, 0.3826834 ] ] #[ 0, 0, 0.0, 0.1 ]]
-      - [[0.005, 0.41050, 0.020], [ 0.9238795, 0.3826834, 0, 0 ]]
+      - [[-0.007, 0.390, 0.028], [ 0.9238795, 0.3826834, 0, 0 ]]
 
       # bolt hole on the side_right
       # TODO : change the position along z-axis
-      # - [[0.45, 0.858, -0.35], [ 0, 0, 0.6613119, 0.7501111 ]] # original value
-      - [[0.445, 0.858, -0.35], [ 0, 0, 0.6613119, 0.7501111 ]]           
+      # - [[0.45, 0.858, -0.35], [ 0, 0, 0.6613119, 0.7501111 ]] # original value      
+      - [[0.445, 0.843, -0.35], [ 0, 0, 0.6613119, 0.7501111 ]]           
       - [[0.365, 0.41050, -0.35], [ 0, 0, 0.819152, 0.5735764 ]] # for panda_right bolting
+      
       # - [[0.370, 0.40050, -0.35], [ 0, 0, 0.9239, 0.3827 ]] # for panda_right bolting
       # - [[-0.000, 0.41050, -0.38535], [ 0, 0, 0.3826834, 0.9238795 ]]
       - [[-0.000, 0.41050, -0.38535], [ 0, 0, 0.3826834, 0.9238795 ]]
@@ -204,7 +220,8 @@ ikea_stefan_without_bottom:
       # - [[0.0171, 0.4254, -0.0858], [ -0.7071068, 0, 0, 0.7071068 ]]
       # - [[0.0171, 0.4254, -0.3119], [ -0.7071068, 0, 0, 0.7071068 ]]
       - [[0.03, 0.4254, -0.0865], [ -0.7071068, 0, 0, 0.7071068 ]]
-      - [[0.03, 0.4254, -0.3102], [ -0.7071068, 0, 0, 0.7071068 ]]
+      # - [[0.03, 0.4254, -0.3102], [ -0.7071068, 0, 0, 0.7071068 ]]
+      - [[0.03, 0.4254, -0.317], [ -0.7071068, 0, 0, 0.7071068 ]]
 
 
     graspable_points: ikea_stefan_assembled_jy_grasp.yaml
