update comp middle setting + kitting settings

--- a/furniture_info/stefan.yaml
+++ b/furniture_info/stefan.yaml
@@ -157,13 +157,21 @@ ikea_stefan_middle:
       #  - [[-0.135, -0.016, 0.01], [0.5, 0.5, 0.5, 0.5]]
       #  - [[-0.135, -0.295, 0.0055], [0.5, 0.5, 0.5, 0.5]]      
 
-         # HC Tuned
-       - [[0.135, 0.016, 0.01], [ -0.5, -0.5, 0.5, 0.5 ]]
-       - [[0.135, -0.016, 0.01], [ -0.5, -0.5, 0.5, 0.5 ]]
-       - [[0.135, -0.297, 0.0060], [  -0.5, -0.5, 0.5, 0.5 ]]      
-       - [[-0.135, 0.012, 0.013], [0.5, 0.5, 0.5, 0.5]] # 210227
-       - [[-0.135, -0.02, 0.013], [0.5, 0.5, 0.5, 0.5]] # 210227
-       - [[-0.135, -0.3, 0.0055], [0.5, 0.5, 0.5, 0.5]]      
+      #    # HC Tuned
+      #  - [[0.135, 0.012, 0.012], [ -0.5, -0.5, 0.5, 0.5 ]] # 210307
+      #  - [[0.135, -0.017, 0.012], [ -0.5, -0.5, 0.5, 0.5 ]] # 210307
+      #  - [[0.135, -0.297, 0.0060], [  -0.5, -0.5, 0.5, 0.5 ]]
+      #  - [[-0.135, 0.009, 0.016], [0.5, 0.5, 0.5, 0.5]] # 210307
+      #  - [[-0.135, -0.022, 0.013], [0.5, 0.5, 0.5, 0.5]] # 210307
+      #  - [[-0.135, -0.3, 0.0055], [0.5, 0.5, 0.5, 0.5]]      
+
+         # HC Tuned For Competition
+       - [[0.135, 0.013, 0.0105], [ -0.5, -0.5, 0.5, 0.5 ]] # 0
+       - [[0.135, -0.017, 0.010], [ -0.5, -0.5, 0.5, 0.5 ]] # 1
+       - [[0.135, -0.2994, 0.0076], [  -0.5, -0.5, 0.5, 0.5 ]] # 2
+       - [[-0.135, 0.0125, 0.015], [0.5, 0.5, 0.5, 0.5]] # 3
+       - [[-0.135, -0.0175, 0.013], [0.5, 0.5, 0.5, 0.5]] # 4
+       - [[-0.135, -0.3002, 0.0075], [0.5, 0.5, 0.5, 0.5]] # 5
 
          # point to mate a zig
        - [[0.135, -0.31, -0.005], [0, 0, 0, 1]]
@@ -207,8 +215,10 @@ ikea_stefan_without_bottom:
       # bolt hole on the side_right
       # TODO : change the position along z-axis
       # - [[0.45, 0.858, -0.35], [ 0, 0, 0.6613119, 0.7501111 ]] # original value      
-      - [[0.445, 0.843, -0.35], [ 0, 0, 0.6613119, 0.7501111 ]]           
-      - [[0.365, 0.41050, -0.35], [ 0, 0, 0.819152, 0.5735764 ]] # for panda_right bolting
+      # - [[0.445, 0.843, -0.35], [ 0, 0, 0.6613119, 0.7501111 ]]   # for mission 1        
+      - [[0.45, 0.838, -0.35], [ 0, 0, 0.6613119, 0.7501111 ]]      # for mission 2     
+      # - [[0.365, 0.41050, -0.35], [ 0, 0, 0.819152, 0.5735764 ]] #index_4
+      - [[0.375, 0.38, -0.35], [ 0, 0, 0.819152, 0.5735764 ]] #index_4 210305
       
       # - [[0.370, 0.40050, -0.35], [ 0, 0, 0.9239, 0.3827 ]] # for panda_right bolting
       # - [[-0.000, 0.41050, -0.38535], [ 0, 0, 0.3826834, 0.9238795 ]]
